@@ -5,7 +5,7 @@ import logging
 import os
 import traceback
 
-from meitrack.build_message import stc_restart_gps, stc_restart_gsm
+from meitrack.build_message import stc_restart_gps, stc_restart_gsm, stc_set_output_pin
 from meitrack.common import DIRECTION_CLIENT_TO_SERVER
 from meitrack.file_list import FileListing, FileListingError
 from meitrack.firmware_update import FirmwareUpdate, STAGE_FIRST, STAGE_SECOND, stc_cancel_ota_update
@@ -546,6 +546,14 @@ class MeitrackChatClient(BaseChatClient):
             gprs = stc_restart_gps(self.imei)
             self.queue_gprs(gprs, True)
             self.queue_event_report(self.imei, "Request gps restart")
+
+    def set_output(self, pin, state):
+        if not self.imei:
+            logger.error("Unable to request client to update firmware as client id not yet known")
+        else:
+            gprs = stc_set_output_pin(self.imei, 1, pin, state)
+            self.queue_gprs(gprs, True)
+            self.queue_event_report(self.imei, "Request set pin %s to state %s" % (pin, state))
 
     def update_configuration(self):
         if not self.imei:
